--- a/src/shared/ui/input/style.scss
+++ b/src/shared/ui/input/style.scss
@@ -6,14 +6,14 @@
 .label {
   font-size: 9px;
   line-height: 1;
-  font-weight: medium;
+  font-weight: 500;
   color: var(--color-grey-900);
   margin-bottom: 1px;
 }
 
 .input {
   font-size: 13px;
-  font-weight: medium;
+  font-weight: 500;
   line-height: 1;
   padding: 7px 0 8px;
   border: none;
