--- a/src/features/auth/ui/auth-form/style.scss
+++ b/src/features/auth/ui/auth-form/style.scss
@@ -4,6 +4,7 @@
   align-items: center;
   padding: 50px 30px 30px;
   box-shadow: 0 0 6px 0 rgba(var(--color-black--rgb), 0.14);
+  border-radius: 12px;
 }
 
 .title {
