--- a/src/app/style/variables.scss
+++ b/src/app/style/variables.scss
@@ -3,6 +3,8 @@ $colors: (
   "white": #ffffff,
   "black": #000000,
   "grey-900": #999999,
+  "grey-500": #fbfbfb,
+  "grey-400": #eaeaea,
   "grey-100": #1e1e1e,
   "error": #ff2f2f,
 );
