--- a/src/app/style/variables.scss
+++ b/src/app/style/variables.scss
@@ -5,6 +5,7 @@ $colors: (
   "grey-900": #999999,
   "grey-500": #fbfbfb,
   "grey-400": #eaeaea,
+  "grey-300": #efefef,
   "grey-100": #1e1e1e,
   "error": #ff2f2f,
 );
