--- a/src/shared/ui/input/style.scss
+++ b/src/shared/ui/input/style.scss
@@ -7,7 +7,7 @@
   font-size: 9px;
   line-height: 1;
   font-weight: 500;
-  color: var(--color-grey-900);
+  color: var(--color-input-value);
   margin-bottom: 1px;
 }
 
