--- a/src/entities/profile/ui/aside-button/style.scss
+++ b/src/entities/profile/ui/aside-button/style.scss
@@ -4,14 +4,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--color-grey-500);
+  background-color: var(--color-aside-button-background);
   transition: 0.2s background-color;
 
   &:hover {
-    background-color: rgba(var(--color-grey-500--rgb), 0.9);
+    background-color: rgba(var(--color-aside-button-background--rgb), 0.9);
   }
 
   &:active {
-    background-color: rgba(var(--color-grey-500--rgb), 0.8);
+    background-color: rgba(var(--color-aside-button-background--rgb), 0.8);
   }
 }
