--- a/src/entities/profile/ui/avatar-button/style.scss
+++ b/src/entities/profile/ui/avatar-button/style.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   width: 130px;
   height: 130px;
-  background-color: var(--color-grey-300);
+  background-color: var(--color-avatar-button-background);
   border-radius: 50%;
   overflow: hidden;
 }
@@ -27,7 +27,7 @@
   top: 0;
   right: 0;
   bottom: 0;
-  background-color: var(--color-black);
+  background-color: var(--color-additional-background);
   transition: 0.3s opacity;
   opacity: 0;
   border-radius: 50%;
@@ -40,7 +40,7 @@
   margin: 0;
   transform: translate(-50%, -50%);
   z-index: 2;
-  color: var(--color-white);
+  color: var(--color-primary-button-text);
   font-size: 13px;
   line-height: 14px;
   font-weight: 500;
