--- a/src/entities/profile/ui/user-data-row/style.scss
+++ b/src/entities/profile/ui/user-data-row/style.scss
@@ -6,7 +6,7 @@
 }
 
 .border {
-  border-bottom: 1px solid var(--color-grey-400);
+  border-bottom: 1px solid var(--color-border);
 }
 
 .label {
@@ -18,5 +18,5 @@
 .value {
   font-size: 13px;
   line-height: 1;
-  color: var(--color-grey-900);
+  color: var(--color-input-value);
 }
