--- a/src/pages/profile-page/style.scss
+++ b/src/pages/profile-page/style.scss
@@ -19,7 +19,7 @@
 
 .asideButton {
   width: 65px;
-  border-right: 1px solid var(--color-grey-400);
+  border-right: 1px solid var(--color-border);
 }
 
 .profile {
