--- a/src/shared/ui/primary-button/style.scss
+++ b/src/shared/ui/primary-button/style.scss
@@ -6,7 +6,7 @@
   font-size: 13px;
   font-weight: 500;
   line-height: 1;
-  color: var(--color-white);
+  color: var(--color-primary-button-text);
   transition: 0.2s background-color;
 
   &:hover {
