feat(chat): add chat item button ui

--- a/src/app/style/variables.scss
+++ b/src/app/style/variables.scss
@@ -10,6 +10,7 @@ $colors: (
   "text": #1e1e1e,
   "error": #ff2f2f,
   "text-button-additional-text": #ff0000,
+  "chat-item-hover": #e4edfd,
 );
 
 @function cl($name, $opacity: false) {
