feat(chats): add aside ui

--- a/src/app/style/variables.scss
+++ b/src/app/style/variables.scss
@@ -5,7 +5,7 @@ $colors: (
   "avatar-button-background": #efefef,
   "additional-background": #000000,
   "input-value": #999999,
-  "aside-button-background": #fbfbfb,
+  "aside-background": #fbfbfb,
   "border": #eaeaea,
   "text": #1e1e1e,
   "error": #ff2f2f,
