--- a/src/features/chat/ui/chat-item-button/style.scss
+++ b/src/features/chat/ui/chat-item-button/style.scss
@@ -1,3 +1,28 @@
+.wrapper {
+  position: relative;
+  padding: 2px 0 3px;
+
+  &:first-child {
+    padding-top: 0;
+  }
+
+  &:last-child {
+    padding-bottom: 0;
+  }
+
+  &:not(:last-child) {
+    &::after {
+      content: "";
+      position: absolute;
+      left: 10px;
+      right: 10px;
+      bottom: 0;
+      height: 1px;
+      background-color: var(--color-border);
+    }
+  }
+}
+
 .button {
   padding: 10px;
   background-color: transparent;
