--- a/src/pages/chat-page/style.scss
+++ b/src/pages/chat-page/style.scss
@@ -1,3 +1,10 @@
+.divider {
+  padding: 0 10px;
+  height: 1px;
+  width: 100%;
+  background-color: var(--color-border);
+}
+
 .wrapper {
   width: 100%;
   height: 100vh;
@@ -30,11 +37,11 @@
 
 .content {
   flex: 2;
+  display: flex;
+  flex-direction: column;
+  padding: 0 20px;
 }
 
-.divider {
-  padding: 0 10px;
-  height: 1px;
+.chatHeader {
   width: 100%;
-  background-color: var(--color-border);
 }
