feat(icons): use current color for icons fill

--- a/src/entities/profile/ui/aside-button/style.scss
+++ b/src/entities/profile/ui/aside-button/style.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   background-color: var(--color-aside-background);
   transition: 0.2s background-color;
+  color: var(--color-primary);
 
   &:hover {
     background-color: rgba(var(--color-aside-background--rgb), 0.9);
