--- a/src/app/style/variables.scss
+++ b/src/app/style/variables.scss
@@ -14,6 +14,7 @@ $colors: (
   "hover-button": #f5f5f5,
   "message-background": #f8f8f8,
   "user-message-background": #e4edfd,
+  "black": #000000,
 );
 
 @function cl($name, $opacity: false) {
