--- a/src/app/style/variables.scss
+++ b/src/app/style/variables.scss
@@ -15,6 +15,8 @@ $colors: (
   "message-background": #f8f8f8,
   "user-message-background": #e4edfd,
   "black": #000000,
+  "white": #ffffff,
+  "file-text": #8d8d8d,
 );
 
 @function cl($name, $opacity: false) {
