--- a/src/entities/profile/ui/avatar-button/style.scss
+++ b/src/entities/profile/ui/avatar-button/style.scss
@@ -8,6 +8,12 @@
   background-color: var(--color-avatar-button-background);
   border-radius: 50%;
   overflow: hidden;
+
+  & img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .button:hover {
