--- a/src/shared/ui/modal-layout/style.scss
+++ b/src/shared/ui/modal-layout/style.scss
@@ -1,9 +1,21 @@
 .layout {
+  position: relative;
   min-height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.content {
+  position: relative;
+  z-index: 1;
+}
+
+.plug {
+  position: absolute;
+  width: 100%;
+  height: 100%;
   background-color: var(--color-black);
   opacity: 0.4;
 }
