feat(chats): add create chat modal

--- a/src/pages/chat-page/style.scss
+++ b/src/pages/chat-page/style.scss
@@ -62,3 +62,11 @@
   width: 100%;
   text-align: center;
 }
+
+.emptyContent {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
