--- a/src/shared/ui/badge/style.scss
+++ b/src/shared/ui/badge/style.scss
@@ -5,6 +5,7 @@
   color: var(--color-primary-button-text);
   background-color: var(--color-primary);
   border-radius: 20px;
+  min-width: 20px;
   padding: 4px;
   white-space: nowrap;
 }
