--- a/src/features/chat/ui/chat-header/style.scss
+++ b/src/features/chat/ui/chat-header/style.scss
@@ -23,6 +23,18 @@
 }
 
 .actions {
+  position: relative;
   display: flex;
   align-items: center;
+}
+
+.dropdown {
+  z-index: 100;
+  position: absolute;
+  top: calc(100% + 25px);
+  right: -10px;
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14);
+  border-radius: 12px;
+  padding: 8px;
+  background-color: var(--color-white);
 }
