--- a/src/shared/ui/icon-button/style.scss
+++ b/src/shared/ui/icon-button/style.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 25px;
+  min-width: 25px;
   height: 25px;
   z-index: 1;
   background-color: transparent;
@@ -18,7 +18,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    border-radius: 50%;
+    border-radius: 25px;
     transition: 0.3s background-color;
     background-color: transparent;
   }
@@ -30,4 +30,11 @@
       background-color: var(--color-hover-button);
     }
   }
+}
+
+.text {
+  font-size: 12px;
+  line-height: 14px;
+  padding: 0 15px;
+  white-space: nowrap;
 }
