chore: add webpack dev server

--- a/src/entities/chat/ui/message/style.scss
+++ b/src/entities/chat/ui/message/style.scss
@@ -1,7 +1,7 @@
 .wrapper {
   width: 100%;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
 }
 
 .message {
@@ -18,7 +18,7 @@
 }
 
 .userWrapper {
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .messageWrapper {
