--- a/src/entities/chat/ui/messages/style.scss
+++ b/src/entities/chat/ui/messages/style.scss
@@ -2,7 +2,7 @@
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
   gap: 30px;
   padding: 30px 0;
   margin-top: auto;
